@@ -1,6 +1,9 @@
 LIST OF CHANGES
 ---------------
- 
+
+ - Add 3 columns to the pac_bio_run_well_metrics to store well level
+   demultiplexing information.
+
  release 6.27.0
  - Add column to the pac_bio_run_well_metrics to store the ccs dataset
    id for a sample well.
